--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "angular-move-element",
+    "name": "ng-move-element",
     "version": "1.0.0",
     "repository": {
         "type": "git",
